--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -107,6 +107,12 @@
 				overflow: hidden;
 				padding: 0;
 				width: 20px;
+
+				&[data-coblocks-custom-icon] {
+					height: 40px;
+					margin: -10px 0;
+					width: 40px;
+				}
 			}
 		}
 
@@ -230,7 +236,7 @@
 	align-items: center;
 	display: flex;
 	justify-content: center;
-	
+
 	svg {
 		transform: scale(4);
 	}
