add number input for height controls

--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -92,3 +92,14 @@
 		opacity: 1;
 	}
 }
+
+.block-height-control {
+	.components-base-control__label {
+		display: block;
+	}
+
+	.block-height-control__input {
+		width: 40%;
+		// min-width: 40%;
+	}
+}
