--- a/src/blocks/services/service/styles/editor.scss
+++ b/src/blocks/services/service/styles/editor.scss
@@ -29,18 +29,13 @@
 	display: block;
 	flex: 1 100%;
 
-	.editor-media-placeholder {
-		min-height: unset;
-		padding: calc(9 / 16 * 100%) 0 0 0;
-		position: relative;
+	.block-editor-media-placeholder {
+		background: $dark-opacity-light-200;
+		min-height: inherit;
+		border: 1px dashed $dark-gray-150;
 
-		.is-style-circle & {
-			border-radius: 100%;
-			padding-top: 100%;
-		}
-
-		.is-style-square & {
-			padding-top: 100%;
+		&:hover {
+			border-color: $dark-gray-500;
 		}
 
 		.components-placeholder__label,
@@ -49,6 +44,7 @@
 		}
 
 		.components-placeholder__fieldset {
+			align-content: center;
 			align-items: center;
 			height: 100%;
 			left: 0;
