--- a/src/styles/style/_columns.scss
+++ b/src/styles/style/_columns.scss
@@ -30,7 +30,7 @@
 		}
 	}
 
-	&.alignfull {
+	.alignfull & {
 		padding-left: map-get($padding, 2);
 		padding-right: map-get($padding, 2);
 
@@ -41,18 +41,10 @@
 		}
 	}
 
-	&.columns-3.alignfull,
-	&.columns-4.alignfull {
+	.alignfull &.columns-3,
+	.alignfull &.columns-4 {
 		// 1280px+
 		@include break-medium() {
-			padding-left: map-get($padding, 4);
-			padding-right: map-get($padding, 4);
-		}
-	}
-
-	&.columns-4.alignfull {
-		// 1280px+
-		@include break-wide() {
 			padding-left: map-get($padding, 4);
 			padding-right: map-get($padding, 4);
 		}
