--- a/src/styles/style/_columns.scss
+++ b/src/styles/style/_columns.scss
@@ -3,7 +3,34 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 
-	&.alignfull {
+	&.columns-2 > *,
+	&.columns-3 > *,
+	&.columns-4 > * {
+		// 600px+
+		@include break-small() {
+			flex-basis: 50%;
+			max-width: calc(100% / 2 - #{map-get($margin, 2)});
+		}
+	}
+
+	&.columns-3 > *,
+	&.columns-4 > * {
+		// 782px+
+		@include break-medium() {
+			flex-basis: 33.33%;
+			max-width: calc(100% / 3 - #{map-get($margin, 3)});
+		}
+	}
+
+	&.columns-4 > * {
+		// 1280px+
+		@include break-wide() {
+			flex-basis: 25%;
+			max-width: calc(100% / 4 - #{map-get($margin, 3)});
+		}
+	}
+
+	.alignfull & {
 		padding-left: map-get($padding, 2);
 		padding-right: map-get($padding, 2);
 
@@ -14,47 +41,12 @@
 		}
 	}
 
-	&-3.alignfull,
-	&-4.alignfull {
+	.alignfull &.columns-3,
+	.alignfull &.columns-4 {
 		// 1280px+
 		@include break-medium() {
 			padding-left: map-get($padding, 4);
 			padding-right: map-get($padding, 4);
-		}
-	}
-
-	&-4.alignfull {
-		// 1280px+
-		@include break-wide() {
-			padding-left: map-get($padding, 4);
-			padding-right: map-get($padding, 4);
-		}
-	}
-
-	&-2 > *,
-	&-3 > *,
-	&-4 > * {
-		// 600px+
-		@include break-small() {
-			flex-basis: 50%;
-			max-width: calc(100% / 2 - #{map-get($margin, 2)});
-		}
-	}
-
-	&-3 > *,
-	&-4 > * {
-		// 782px+
-		@include break-medium() {
-			flex-basis: 33.33%;
-			max-width: calc(100% / 3 - #{map-get($margin, 3)});
-		}
-	}
-
-	&-4 > * {
-		// 1280px+
-		@include break-wide() {
-			flex-basis: 25%;
-			max-width: calc(100% / 4 - #{map-get($margin, 3)});
 		}
 	}
 }
