--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -41,6 +41,7 @@
 	& &__button.components-button.is-default {
 		align-items: center;
 		background: $white;
+		border: 1px solid theme(primary);
 		border-radius: 4px !important;
 		box-shadow: none;
 		display: flex;
@@ -53,6 +54,10 @@
 		padding: 0;
 		text-align: center;
 		width: 90px;
+
+		svg {
+			fill: theme(primary);
+		}
 
 		&:focus {
 			box-shadow: 0 0 0 4px $light-gray-200, 0 0 0 6px theme(toggle);
