--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -3,11 +3,14 @@
 		position: relative;
 
 		&__mobile-controls-item {
-			background: $white;
-			border: 1px solid $dark-gray-150;
+			color: color(theme(button) shade(6%));
+			border-color: color(theme(button) shade(6%));
+			background: #f3f5f6;
+			// background: $white;
+			border: 1px solid;
 			border-radius: 4px 0 0 4px;
 			box-shadow: none;
-			color: $dark-gray-500;
+			// color: $dark-gray-500;
 			display: none;
 			font-size: 10px;
 			height: 30px;
@@ -27,17 +30,19 @@
 			}
 
 			&:hover {
-				border-color: $dark-gray-500;
-				color: $dark-gray-900;
+				background: #f1f1f1;
+				border-color: color(theme(button) shade(25%));
+				color: color(theme(button) shade(25%));
+				text-decoration: none;
 			}
 
 			&:focus:enabled {
-				background: $dark-gray-500 !important;
-				border-color: $dark-gray-500;
+				// background: $dark-gray-500 !important;
+				// border-color: $dark-gray-500;
 				box-shadow: inset 0 0 0 1px $white;
 
 				svg {
-					fill: $white;
+					// fill: $white;
 				}
 			}
 
@@ -84,11 +89,22 @@
 		}
 
 		input[type="number"].components-coblocks-dimensions-control__number {
+			color: color(theme(button) shade(6%));
+			border-color: color(theme(button) shade(6%));
+			background: #f3f5f6;
+
 			border-radius: 0;
 			height: 30px;
 			margin: 0 -1px 0 0;
 			padding-right: 1px;
 			width: 25%;
+
+			&:hover {
+				background: #f1f1f1;
+				border-color: color(theme(button) shade(25%));
+				color: color(theme(button) shade(25%));
+				text-decoration: none;
+			}
 
 			&:focus {
 				z-index: 1;
@@ -143,10 +159,11 @@
 
 		.components-coblocks-dimensions-control__header
 			.components-color-palette__clear {
-			background: $white;
-			border: 1px solid $light-gray-500;
+			// color: color(theme(button) shade(6%));
+			// border-color: color(theme(button) shade(6%));
+			// background: #f3f5f6;
+			border: 1px solid;
 			box-shadow: none;
-			color: $dark-gray-500;
 			height: 22px;
 			line-height: 20px;
 			margin-left: 12px;
@@ -156,30 +173,37 @@
 			top: -1px;
 
 			&:hover {
-				border-color: $dark-gray-500;
-				color: $dark-gray-900;
+				// background: #f1f1f1;
+				// border-color: color(theme(button) shade(25%));
+				// color: color(theme(button) shade(25%));
+				text-decoration: none;
 			}
 
 			&:active:enabled {
-				background: $white;
-				border-color: #999;
+				// background: #f3f5f6;
+				// color: color(theme(button) shade(5%));
+				// border-color: #7e8993;
 				box-shadow: none;
 			}
 
 			&:focus {
-				background: $white;
-				box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
-				outline: 2px solid transparent;
-				outline-offset: -2px;
+				// background: #f3f5f6;
+				// color: color(theme(button) shade(25%));
+				// border-color: color(theme(button) shade(5%));
+				box-shadow: 0 0 0 $border-width color(theme(button) shade(5%));
+				text-decoration: none;
 			}
 		}
 
 		&__units {
 			.components-button {
-				background: $white;
-				border-color: $light-gray-500;
+				// color: color(theme(button) shade(6%));
+				// border-color: color(theme(button) shade(6%));
+				// background: #f3f5f6;
+				// background: $white;
+				// border-color: $light-gray-500;
 				box-shadow: none !important;
-				color: $dark-gray-300;
+				// color: $dark-gray-300;
 				font-size: 10px;
 				height: 22px;
 				justify-content: center;
@@ -193,52 +217,75 @@
 				width: 22px;
 
 				&:hover {
-					border-color: $dark-gray-500;
-					color: $dark-gray-900;
+					// background: #f1f1f1;
+					// border-color: color(theme(button) shade(25%));
+					// color: color(theme(button) shade(25%));
+					text-decoration: none;
+				}
+	
+				&:active:enabled {
+					// background: #f3f5f6;
+					// color: color(theme(button) shade(5%));
+					// border-color: #7e8993;
+					box-shadow: none;
+				}
+	
+				&:focus {
+					// background: #f3f5f6;
+					// color: color(theme(button) shade(25%));
+					// border-color: color(theme(button) shade(5%));
+					// box-shadow: 0 0 0 $border-width color(theme(button) shade(5%));
+					text-decoration: none;
 				}
 
-				&:focus {
-					background: $dark-gray-500;
-					box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
-					outline: 2px solid transparent;
-					outline-offset: -2px;
-				}
+			
 
 				&:not(.is-primary):hover {
 					background: $white;
 					box-shadow: none;
-					color: $dark-gray-900;
+					// color: $dark-gray-900;
 				}
 
 				&.is-primary {
-					background: $dark-gray-500;
-					border-color: $dark-gray-500;
-					color: $white;
-					cursor: default;
-					z-index: 1;
+					// background: color(theme(button));
+					// border-color: color(theme(button));
+					// color: $white;
+					text-decoration: none;
+					text-shadow: none;
 
-					&:focus {
-						background: $dark-gray-500;
-						box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
+					&:hover,
+					&:focus:enabled {
+						// background: color(theme(button) shade(10%));
+						// border-color: color(theme(button) shade(10%));
+						// color: $white;
+					}
+
+					&:focus:enabled {
+						// box-shadow:
+						// 0 0 0 $border-width $white,
+						// 0 0 0 3px color(theme(button));
 					}
 
 					&:active:enabled {
-						background: $dark-gray-500;
-						border-color: $dark-gray-500;
-						box-shadow: none;
+						// background: color(theme(button) shade(20%));
+						// border-color: color(theme(button) shade(20%));
+						// color: $white;
 					}
 				}
 			}
 		}
 
 		&_sync.components-button.is-small {
-			background: $white;
-			border: 1px solid $dark-gray-150;
+			// color: color(theme(button) shade(6%));
+			// border-color: color(theme(button) shade(6%));
+			// background: #f3f5f6;
+			// background: $white;
+			// border: 1px solid;
 			border-bottom-right-radius: 4px;
 			border-radius: 0;
 			border-top-right-radius: 4px;
 			box-shadow: none;
-			color: $dark-gray-500;
+			// color: $dark-gray-500;
 			height: auto;
 			justify-content: center;
 			padding: 0;
@@ -247,62 +294,67 @@
 			width: 30px;
 
 			svg {
-				fill: $dark-gray-500;
+				// fill: $dark-gray-500;
 				height: 18px;
 				width: 18px;
 			}
 
 			&:focus {
-				background: $dark-gray-500 !important;
-				border-color: $dark-gray-500;
-				box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
-				color: $white !important;
+				// background: $dark-gray-500 !important;
+				// border-color: $dark-gray-500;
+				// box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
+				// color: $white !important;
 				outline: 2px solid transparent;
 				outline-offset: -2px;
 
 				svg {
-					fill: $white !important;
+					// fill: $white !important;
 				}
 			}
 
-			&:not(.is-primary) {
-				cursor: default;
-			}
+			// &:not(.is-primary) {
+			// 	cursor: default;
+			// }
 
 			&:not(.is-primary):active:enabled,
 			&:not(.is-primary):focus:enabled {
 				box-shadow: none;
-				color: $white !important;
+				// color: $white !important;
 			}
 
 			&:not(.is-primary):hover {
-				background: $white;
-				border-color: $dark-gray-500;
+				// background: $white;
+				// border-color: $dark-gray-500;
 				box-shadow: none;
-				color: $dark-gray-500;
+				// color: $dark-gray-500;
 				cursor: pointer;
 
 				svg {
-					fill: $dark-gray-500;
+					// fill: $dark-gray-500;
 				}
 			}
 
 			&.is-primary {
-				background: $dark-gray-500;
-				border-color: $dark-gray-500;
-				color: $white !important;
+				// background: color(theme(button));
+				// border-color: color(theme(button));
+				// color: $white;
+				// background: $dark-gray-500;
+				// border-color: $dark-gray-500;
+				// color: $white !important;
 
-				svg {
-					fill: $white !important;
-				}
+				// svg {
+				// 	fill: $white !important;
+				// }
 
 				&:focus {
-					background: $dark-gray-500;
+					// background: color(theme(button));
 				}
 
 				&:active:enabled {
-					background: $dark-gray-500;
-					border-color: $dark-gray-500;
+					// background: color(theme(button));
+					// border-color: color(theme(button));
+					// background: $dark-gray-500;
+					// border-color: $dark-gray-500;
 					box-shadow: none;
 				}
 			}
