--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -32,7 +32,6 @@
 		padding: 4px;
 
 		&:focus {
-			box-shadow: 0 0 0 2px theme(primary);
 			outline: 2px solid transparent;
 			outline-offset: -2px;
 		}
@@ -41,7 +40,7 @@
 	& &__button.components-button.is-default {
 		align-items: center;
 		background: $white;
-		border: 1px solid theme(primary);
+		border: 1px solid;
 		border-radius: 4px !important;
 		box-shadow: none;
 		display: flex;
@@ -55,20 +54,9 @@
 		text-align: center;
 		width: 90px;
 
-		svg {
-			fill: theme(primary);
-		}
-
 		&:focus {
-			box-shadow: 0 0 0 4px $light-gray-200, 0 0 0 6px theme(toggle);
 			outline: 2px solid transparent;
 			outline-offset: -2px;
-		}
-
-		&:active:enabled {
-			background: $white;
-			border-color: rgba(25, 30, 35, 0.3);
-			box-shadow: 0 0 0 4px $light-gray-200, 0 0 0 6px theme(toggle);
 		}
 	}
 
@@ -78,13 +66,13 @@
 	}
 
 	&__back.components-icon-button {
-		background: $white;
-		border: 1px solid rgba(25, 30, 35, 0.2);
+		// background: $white;
+		// border: 1px solid rgba(25, 30, 35, 0.2);
 		margin-right: 4px;
 
 		&:hover {
-			box-shadow: 0 0 0 4px $dark-opacity-light-200 !important;
-			color: $dark-gray-900;
+			// box-shadow: 0 0 0 4px $dark-opacity-light-200 !important;
+			// color: $dark-gray-900;
 		}
 	}
 
@@ -106,8 +94,6 @@
 				&:focus,
 				&:active,
 				&.is-selected {
-					box-shadow: 0 0 0 2px theme(toggle);
-					color: $dark-gray-900;
 					outline: 2px solid transparent;
 					outline-offset: -2px;
 
@@ -125,14 +111,11 @@
 				width: 100%;
 
 				&:active:enabled {
-					background: $white;
-					border-color: none;
 					box-shadow: none !important;
 				}
 
 				&:focus {
 					box-shadow: none;
-					color: $dark-gray-900;
 					outline: 2px solid transparent;
 					outline-offset: -2px;
 				}
@@ -186,29 +169,13 @@
 	width: 63px;
 }
 
-.components-coblocks-visual-dropdown__popover {
-	.components-coblocks-visual-dropdown__button-wrapper:hover {
-		background: $light-gray-200;
-		color: $dark-gray-900;
-	}
-}
-
 .components-coblocks-visual-dropdown__popover:not(.is-mobile) {
 	.components-popover__content {
 		max-width: 340px;
 
 		.editor-block-styles__item-label {
-			color: $dark-gray-500;
 			margin-top: 4px;
 			text-align: center;
-		}
-
-		.components-coblocks-visual-dropdown__button-wrapper:hover {
-			background: $light-gray-200;
-
-			.editor-block-styles__item-label {
-				color: $dark-gray-900;
-			}
 		}
 	}
 }
