--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -54,6 +54,10 @@
 
 		.components-base-control__field {
 			margin-bottom: 15px;
+
+			.components-base-control__label {
+				width: 100%;
+			}
 		}
 	}
 
@@ -132,6 +136,10 @@
 	.coblocks-field-multiple__add-option svg {
 		margin-right: 5px;
 	}
+}
+
+.editor-block-list__block[data-type="coblocks/field-select"] .coblocks-field-multiple__add-option {
+	margin-left: 0;
 }
 
 @import "notice";
