Set margin to 0

--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -12,10 +12,10 @@
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
+	}
 
-		li {
-			margin: inherit;
-		}
+	li {
+		margin: 0;
 	}
 
 	&__item {
