Remove margin and padding on editor ul

--- a/src/blocks/gallery-collage/styles/editor.scss
+++ b/src/blocks/gallery-collage/styles/editor.scss
@@ -26,6 +26,8 @@
 .wp-block[data-type="coblocks/gallery-collage"] {
 	ul {
 		list-style-type: none;
+		margin: 0;
+		padding: 0;
 	}
 
 	&[data-align="full"] .wp-block-coblocks-gallery-collage ul {
