Only force 0 margin on :not(is-style-layered)

--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -6,16 +6,18 @@
 		}
 	}
 
+	&:not(.is-style-layered) {
+		ul li {
+			margin: 0 !important;
+		}
+	}
+
 	ul {
 		display: flex;
 		flex-wrap: wrap;
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
-	}
-
-	li {
-		margin: 0;
 	}
 
 	&__item {
