--- a/src/blocks/events/styles/style.scss
+++ b/src/blocks/events/styles/style.scss
@@ -4,54 +4,31 @@
 	justify-content: space-between;
 
 	// On small screens, we are no longer using row direction but column.
-	@media all and (max-width: 514px) {
+	@include break-small() {
 		flex-direction: column;
 	}
 
-	+ .wp-block-coblocks-events {
-		margin-top: 3em;
-	}
-
-	.wp-block-coblocks-events__more-events-wrapper {
-	  display: flex;
-
-	  .coblocks-events__next-page-icon-container {
-		display: flex;
+	.coblocks-events__next-page-icon-container,
+	.coblocks-events__previous-page-icon-container {
 		align-items: center;
 		cursor: pointer;
-
-		.next-page-icon {
-		  cursor: pointer;
-		  width: 24px;
-		  height: 24px;
-		  background-color: #000;
-		  -webkit-mask-image: url(images/events/next-page-arrow.svg);
-		  mask-image: url(images/events/next-page-arrow.svg);
-		}
-	  }
-
-	  .coblocks-events__previous-page-icon-container {
 		display: flex;
-		align-items: center;
-		cursor: pointer;
-
-		.previous-page-icon {
-		  cursor: pointer;
-		  width: 24px;
-		  height: 24px;
-		  background-color: #000;
-		  -webkit-mask-image: url(images/events/previous-page-arrow.svg);
-		  mask-image: url(images/events/previous-page-arrow.svg);
-		}
-	  }
 	}
 
-	> h1,
-	> h2,
-	> h3,
-	> h4,
-	> h5,
-	> h6 {
+	.next-page-icon,
+	.previous-page-icon {
+		background-color: currentColor;
+		cursor: pointer;
+		height: 24px;
+		mask-image: url(images/events/next-page-arrow.svg);
+		width: 24px;
+	}
+
+	.previous-page-icon {
+		mask-image: url(images/events/previous-page-arrow.svg);
+	}
+
+	> span {
 		flex: 1 100%;
 		margin: 0;
 		padding: 0;
