Add gutenberg select padding

--- a/src/blocks/events/event-item/styles/style.scss
+++ b/src/blocks/events/event-item/styles/style.scss
@@ -1,8 +1,9 @@
 .wp-block-coblocks-event-item {
-	border-bottom: 1px solid #bfbfbf;
+	background-color: #eee;
 	display: block;
 	flex: 1 100%;
 	padding: 40px 0;
+	width: 100%;
 
 	.wp-block-coblocks-event-item__dates {
 		flex-basis: 25%;
