--- a/src/blocks/events/styles/editor.scss
+++ b/src/blocks/events/styles/editor.scss
@@ -33,8 +33,35 @@
 		}
 	}
 
-	// Hide this on Gutenberg 5.9+
+	// Hide appender on Gutenberg 5.9+
 	.block-list-appender {
 		display: none;
 	}
+
+	.wp-block:first-child [data-block] {
+		margin-top: 0;
+	}
+
+	.wp-block:nth-last-child(2) [data-block] {
+		margin-bottom: 0;
+	}
+}
+
+.wp-block[data-type="coblocks/events"] > .block-editor-block-list__block-edit > [data-block] {
+	margin-bottom: 0;
+}
+
+// Add selected padding.
+.block-editor-block-list__block[data-type="coblocks/events"].has-child-selected .wp-block-coblocks-events,
+.block-editor-block-list__block[data-type="coblocks/events"].is-selected .wp-block-coblocks-events {
+	padding: 14px;
+}
+
+.block-editor-block-list__block[data-type="coblocks/events"].is-selected
+	[data-type="coblocks/event-item"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before,
+.block-editor-block-list__block[data-type="coblocks/events"].has-child-selected
+	[data-type="coblocks/event-item"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before {
+	border: 1px dashed rgba(123, 134, 162, 0.3);
 }
