--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,6 +24,10 @@
 @import "style/tooltips";
 @import "style/datepicker";
 
+.display-block {
+	display: block;
+}
+
 .relative {
 	position: relative;
 }
